classDiagram
    direction TB

    class Coin {
        +str name
        +str address
        
    }

    class Asset {
        +Coin coin
        +Decimal amount
    }

    class Ticker {
        +Coin coin
        +Decimal price
    }

    class Deal {
        +Coin departure_coin
        +Coin destination_coin
    }

    class Node {
        +int exchange_id
        +int coin_id
        +float price_to_usdt
    }

    class Edge {
        +Node departure
        +Node destination
        +float multiplier
        +float fixed_fee
    }

    class Graph {
        +list~Node~ nodes
        +list~Edge~ edges
    }

    class Analyst {
        -Graph _graph
        +submit()
        +update_market_data()
    }

    Asset --> Coin
    Ticker --> Coin
    Deal --> Coin
    Graph --> Node
    Graph --> Edge
    Edge --> Node
    Analyst --> Graph

    
